llvm-toolchain-snapshot (1:3.8~svn247576-2) UNRELEASED; urgency=medium

  * Ship run-clang-tidy.py & lang-tidy-diff.py

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 21 Sep 2015 13:16:35 +0200

llvm-toolchain-snapshot (1:3.8~svn247576-1) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * New snapshot release
  * Remove CVE-2015-2305.patch. Already fixed upstream in a different
    way
  * remove patches merge upstream
    - lit-lang.diff
    - locale-issue-ld.diff
  * Also generate liblldb-3.8-dbg
  * Select LLVM OpenMP as the default backend

  [ Gianfranco Costamagna ]
  * d/control: Add more conflicting packages (python-clang and python-lldb)
    (Closes: #796811, #796843)
  * Remove an obsolete declaration about dragonegg
    (cherry-pick from 3.7 branch)

  [ James Price ]
  * d/p/fix-cmake-config-prefix.diff: fix cmake path,
    needs a change after upstream revision r241080
    (Addresses: #794905)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 14 Sep 2015 18:29:09 +0200

llvm-toolchain-snapshot (1:3.8~svn245286-1) unstable; urgency=medium

  * New snapshot release (3.7 => 3.8)
    No need to rename libllvm as 3.8 was not part of the debian archive

  [ Gianfranco Costamagna ]
  * Fix VCS fields.
  * d/p/CVE-2015-2305.patch, fix security issue on regcomp.c
  * Fix many lintian warning/errors
    - copyright fixes
    - control files
    - disabled ocaml documentation

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 18 Aug 2015 14:28:36 +0200

llvm-toolchain-snapshot (1:3.7~svn231060-1~exp2) UNRELEASED; urgency=medium

  * Reflect upstream changes wrt vim package. Split the files into different
    directories
  * Disable the patch force-gcc-header-obj.diff. Seems to cause bug #23556
  * Fix the CMake build. thanks to Paweł Bylica for the fix.
    Fix upstream bug #23352
  * No longer building some clang help page, removing them

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 21 Apr 2015 09:41:41 +0200
