@@ -6,6 +6,5 @@ debian/man/llvm-objdump-@LLVM_VERSION@.1
 debian/man/llvm-rtdyld-@LLVM_VERSION@.1
 debian/man/llvm-size-@LLVM_VERSION@.1
 debian/man/llvm-tblgen-@LLVM_VERSION@.1
-debian/man/macho-dump-@LLVM_VERSION@.1
 debian/man/llvm-ranlib-@LLVM_VERSION@.1
 
