@@ -1,6 +1,7 @@
 llvm-toolchain-snapshot (1:3.8~svn247576-2) UNRELEASED; urgency=medium
 
   * Ship run-clang-tidy.py & lang-tidy-diff.py
+  * Remove macho-dump from LLVM (removed by upstream r248302)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 21 Sep 2015 13:16:35 +0200
 
